--- a/devsite/package.json
+++ b/devsite/package.json
@@ -24,5 +24,8 @@
         "svelte-preprocess": "^4.9.8",
         "tailwindcss": "^2.2.17"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "stream": "0.0.2"
+    }
 }
